# youtube_base

./: .config.conf  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_web.sh
.github/: youtube_base.yml
.github/workflows/: README.md  youtube_base.yml
tests/: api_test.py  func_test.py
website/: pyproject.toml
website/tests/: api_test.py  func_test.py  test_website.py  tests.py
website/website/: __init__.py  add_youtuber.py  main.py
youtube_api/: add_youtuber.py
youtube_base/: manage.py
youtube_base/actions/: admin.py  apps.py  models.py  utils.py  views.py
youtube_base/actions/migrations/: 0001_initial.py
youtube_base/actions/templates/actions/: dashboard.html
youtube_base/settings/: asgi.py  settings.py  urls.py  wsgi.py
youtube_base/static/css/: base.css
youtube_base/templates/: base.html  contact_success.html  contact_us.html
youtube_base/users/: admin.py  authentication.py  forms.py  models.py  tests.py  urls.py  views.py
youtube_base/users/fixtures/: users.json
youtube_base/users/migrations/: 0001_initial.py  0002_profile_subscriptions.py
youtube_base/users/templates/: login_info.html
youtube_base/users/templates/registration/: login.html  login_info.html  sign_up.html
youtube_base/users/templates/users/: password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html
youtube_base/youtube_base/: asgi.py  settings.py  urls.py  wsgi.py
youtube_base/youtubers/: admin.py  feeds.py  forms.py  models.py  serialaizer.py  sitemaps.py  tests.py  urls.py  views.py
youtube_base/youtubers/fixtures/: categories.json  data.json  tags.json  youtubers.json
youtube_base/youtubers/migrations/: 0001_initial.py  0002_alter_category_options_alter_youtuber_options.py  0002_auto_20231212_1206.py  0003_comment.py  0003_youtuber_tags.py  0004_comment_user.py  0005_alter_comment_user.py  0006_merge_0003_youtuber_tags_0005_alter_comment_user.py  0006_youtuber_tags.py
youtube_base/youtubers/templates/youtubers/: add_youtuber.html  category_list.html  comment_form.html  home.html  pagination.html  search.html  tag_form.html  test.html  youtuber_detail.html  youtuber_list.html
