[tool.poetry]
name = "root"
version = "0.1.0"
description = ""
authors = ["Kostiantyn"]
readme = "README.md"
packages = [
    { include = "youtube_api/" },
    { include = "youtube_base" },
    { include = "tests" },
]


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
flake8 = "^6.1.0"
selenium = "^4.16.0"
google-api-python-client = "^2.111.0"
isort = "^5.13.2"
pytest = "^7.4.4"
python-dotenv = "^1.0.0"
crispy-bootstrap4 = "^2023.1"
django-crispy-forms = "^2.1"
djangorestframework = "^3.14.0"
django-taggit = "^5.0.1"
markdown = "^3.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
pytest-rerunfailures = "^14.0"
social-auth-app-django = "^5.4.1"
django-extensions = "^3.2.3"
werkzeug = "^3.0.2"
easy-thumbnails = "^2.8.5"

[tool.poetry.dependencies.windows-curses]
version = "^2.3.2"
platform = "windows"

[tool.isort]
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
